--- a/index.html
+++ b/index.html
@@ -7,59 +7,73 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- categories -->
+    <div class="company-list">
+        <div class="company-list__wrapper">
+            <div class="company-list__section">
+                <a href="#" class="company-list__section-link">
+                    Business & Finances
+                </a>
+            </div>
+            <div class="company-list__subcat">
+                &nbsp;&nbsp; - <a href="" class="company-list__subcat-link">
+                    Banks
+                </a>
+            </div>
+            <div class="company-list__subcat">
+                &nbsp;&nbsp; - <a href="" class="company-list__subcat-link">
+                    Loans
+                </a>
+            </div>
+            <div class="company-list__subcat">
+                &nbsp;&nbsp; - <a href="" class="company-list__subcat-link">
+                    Tax Services
+                </a>
+            </div>
+            <div class="company-list__subcat">
+                &nbsp;&nbsp; - <a href="" class="company-list__subcat-link">
+                    Insurance
+                </a>
+            </div>
+        </div>
+    </div>
+    <!-- Company List A -->
     <div class="company-list">
         <div class="company-list__item">
-            <a class="company-list__item-link" href="#">
-                Lorem ipsum dolor sit amet.
+            <a href="$" class="company-list__item-link">
+                Lorem ipsum dolor sit.
             </a>
         </div>
         <div class="company-list__item">
-            <a class="company-list__item-link" href="#">
-                Lorem ipsum dolor sit amet.
+            <a href="$" class="company-list__item-link">
+                Lorem ipsum dolor sit.
             </a>
         </div>
         <div class="company-list__item">
-            <a class="company-list__item-link" href="#">
-                Lorem ipsum dolor sit amet.
+            <a href="$" class="company-list__item-link">
+                Lorem ipsum dolor sit.
             </a>
         </div>
         <div class="company-list__item">
-            <a class="company-list__item-link" href="#">
+            <a href="$" class="company-list__item-link">
+                Lorem ipsum dolor sit.
+            </a>
+        </div>
+    </div>
+    <!-- lastcompanieslist -->
+    <div class="company-list">
+        <div class="company-list__green">
+            <a href="#" class="company-list__green-link">
                 Lorem ipsum dolor sit amet.
             </a>
         </div>
-        <div class="company-list__item">
-            <a class="company-list__item-link" href="#">
+        <div class="company-list__green">
+            <a href="#" class="company-list__green-link">
                 Lorem ipsum dolor sit amet.
             </a>
         </div>
-        <div class="company-list__item">
-            <a class="company-list__item-link" href="#">
-                Lorem ipsum dolor sit amet.
-            </a>
-        </div>
-        <div class="company-list__item">
-            <a class="company-list__item-link" href="#">
-                Lorem ipsum dolor sit amet.
-            </a>
-        </div>
-        <div class="company-list__item">
-            <a class="company-list__item-link" href="#">
-                Lorem ipsum dolor sit amet.
-            </a>
-        </div>
-        <div class="company-list__item">
-            <a class="company-list__item-link" href="#">
-                Lorem ipsum dolor sit amet.
-            </a>
-        </div>
-        <div class="company-list__item">
-            <a class="company-list__item-link" href="#">
-                Lorem ipsum dolor sit amet.
-            </a>
-        </div>
-        <div class="company-list__item">
-            <a class="company-list__item-link" href="#">
+        <div class="company-list__green">
+            <a href="#" class="company-list__green-link">
                 Lorem ipsum dolor sit amet.
             </a>
         </div>
