--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="main.css">
     <title>Document</title>
 </head>
-<body>
+<body style="padding: 0;margin: 0;">
     <!-- categories -->
     <div class="company-list">
         <div class="company-list__wrapper">
