--- a/index.html
+++ b/index.html
@@ -38,6 +38,276 @@
                 </a>
             </div>
         </div>
+        <div class="company-list__wrapper">
+            <div class="company-list__section">
+                <a href="#" class="company-list__section-link">
+                    Business & Finances
+                </a>
+            </div>
+            <div class="company-list__subcat">
+                &nbsp;&nbsp; - <a href="" class="company-list__subcat-link">
+                    Banks
+                </a>
+            </div>
+            <div class="company-list__subcat">
+                &nbsp;&nbsp; - <a href="" class="company-list__subcat-link">
+                    Loans
+                </a>
+            </div>
+            <div class="company-list__subcat">
+                &nbsp;&nbsp; - <a href="" class="company-list__subcat-link">
+                    Tax Services
+                </a>
+            </div>
+            <div class="company-list__subcat">
+                &nbsp;&nbsp; - <a href="" class="company-list__subcat-link">
+                    Insurance
+                </a>
+            </div>
+        </div>
+        <div class="company-list__wrapper">
+            <div class="company-list__section">
+                <a href="#" class="company-list__section-link">
+                    Business & Finances
+                </a>
+            </div>
+            <div class="company-list__subcat">
+                &nbsp;&nbsp; - <a href="" class="company-list__subcat-link">
+                    Banks
+                </a>
+            </div>
+            <div class="company-list__subcat">
+                &nbsp;&nbsp; - <a href="" class="company-list__subcat-link">
+                    Loans
+                </a>
+            </div>
+            <div class="company-list__subcat">
+                &nbsp;&nbsp; - <a href="" class="company-list__subcat-link">
+                    Tax Services
+                </a>
+            </div>
+            <div class="company-list__subcat">
+                &nbsp;&nbsp; - <a href="" class="company-list__subcat-link">
+                    Insurance
+                </a>
+            </div>
+        </div>
+        <div class="company-list__wrapper">
+            <div class="company-list__section">
+                <a href="#" class="company-list__section-link">
+                    Business & Finances
+                </a>
+            </div>
+            <div class="company-list__subcat">
+                &nbsp;&nbsp; - <a href="" class="company-list__subcat-link">
+                    Banks
+                </a>
+            </div>
+            <div class="company-list__subcat">
+                &nbsp;&nbsp; - <a href="" class="company-list__subcat-link">
+                    Loans
+                </a>
+            </div>
+            <div class="company-list__subcat">
+                &nbsp;&nbsp; - <a href="" class="company-list__subcat-link">
+                    Tax Services
+                </a>
+            </div>
+            <div class="company-list__subcat">
+                &nbsp;&nbsp; - <a href="" class="company-list__subcat-link">
+                    Insurance
+                </a>
+            </div>
+        </div>
+        <div class="company-list__wrapper">
+            <div class="company-list__section">
+                <a href="#" class="company-list__section-link">
+                    Business & Finances
+                </a>
+            </div>
+            <div class="company-list__subcat">
+                &nbsp;&nbsp; - <a href="" class="company-list__subcat-link">
+                    Banks
+                </a>
+            </div>
+            <div class="company-list__subcat">
+                &nbsp;&nbsp; - <a href="" class="company-list__subcat-link">
+                    Loans
+                </a>
+            </div>
+            <div class="company-list__subcat">
+                &nbsp;&nbsp; - <a href="" class="company-list__subcat-link">
+                    Tax Services
+                </a>
+            </div>
+            <div class="company-list__subcat">
+                &nbsp;&nbsp; - <a href="" class="company-list__subcat-link">
+                    Insurance
+                </a>
+            </div>
+        </div>
+        <div class="company-list__wrapper">
+            <div class="company-list__section">
+                <a href="#" class="company-list__section-link">
+                    Business & Finances
+                </a>
+            </div>
+            <div class="company-list__subcat">
+                &nbsp;&nbsp; - <a href="" class="company-list__subcat-link">
+                    Banks
+                </a>
+            </div>
+            <div class="company-list__subcat">
+                &nbsp;&nbsp; - <a href="" class="company-list__subcat-link">
+                    Loans
+                </a>
+            </div>
+            <div class="company-list__subcat">
+                &nbsp;&nbsp; - <a href="" class="company-list__subcat-link">
+                    Tax Services
+                </a>
+            </div>
+            <div class="company-list__subcat">
+                &nbsp;&nbsp; - <a href="" class="company-list__subcat-link">
+                    Insurance
+                </a>
+            </div>
+        </div>
+        <div class="company-list__wrapper">
+            <div class="company-list__section">
+                <a href="#" class="company-list__section-link">
+                    Business & Finances
+                </a>
+            </div>
+            <div class="company-list__subcat">
+                &nbsp;&nbsp; - <a href="" class="company-list__subcat-link">
+                    Banks
+                </a>
+            </div>
+            <div class="company-list__subcat">
+                &nbsp;&nbsp; - <a href="" class="company-list__subcat-link">
+                    Loans
+                </a>
+            </div>
+            <div class="company-list__subcat">
+                &nbsp;&nbsp; - <a href="" class="company-list__subcat-link">
+                    Tax Services
+                </a>
+            </div>
+            <div class="company-list__subcat">
+                &nbsp;&nbsp; - <a href="" class="company-list__subcat-link">
+                    Insurance
+                </a>
+            </div>
+        </div>
+        <div class="company-list__wrapper">
+            <div class="company-list__section">
+                <a href="#" class="company-list__section-link">
+                    Business & Finances
+                </a>
+            </div>
+            <div class="company-list__subcat">
+                &nbsp;&nbsp; - <a href="" class="company-list__subcat-link">
+                    Banks
+                </a>
+            </div>
+            <div class="company-list__subcat">
+                &nbsp;&nbsp; - <a href="" class="company-list__subcat-link">
+                    Loans
+                </a>
+            </div>
+            <div class="company-list__subcat">
+                &nbsp;&nbsp; - <a href="" class="company-list__subcat-link">
+                    Tax Services
+                </a>
+            </div>
+            <div class="company-list__subcat">
+                &nbsp;&nbsp; - <a href="" class="company-list__subcat-link">
+                    Insurance
+                </a>
+            </div>
+        </div>
+        <div class="company-list__wrapper">
+            <div class="company-list__section">
+                <a href="#" class="company-list__section-link">
+                    Business & Finances
+                </a>
+            </div>
+            <div class="company-list__subcat">
+                &nbsp;&nbsp; - <a href="" class="company-list__subcat-link">
+                    Banks
+                </a>
+            </div>
+            <div class="company-list__subcat">
+                &nbsp;&nbsp; - <a href="" class="company-list__subcat-link">
+                    Loans
+                </a>
+            </div>
+            <div class="company-list__subcat">
+                &nbsp;&nbsp; - <a href="" class="company-list__subcat-link">
+                    Tax Services
+                </a>
+            </div>
+            <div class="company-list__subcat">
+                &nbsp;&nbsp; - <a href="" class="company-list__subcat-link">
+                    Insurance
+                </a>
+            </div>
+        </div>
+        <div class="company-list__wrapper">
+            <div class="company-list__section">
+                <a href="#" class="company-list__section-link">
+                    Business & Finances
+                </a>
+            </div>
+            <div class="company-list__subcat">
+                &nbsp;&nbsp; - <a href="" class="company-list__subcat-link">
+                    Banks
+                </a>
+            </div>
+            <div class="company-list__subcat">
+                &nbsp;&nbsp; - <a href="" class="company-list__subcat-link">
+                    Loans
+                </a>
+            </div>
+            <div class="company-list__subcat">
+                &nbsp;&nbsp; - <a href="" class="company-list__subcat-link">
+                    Tax Services
+                </a>
+            </div>
+            <div class="company-list__subcat">
+                &nbsp;&nbsp; - <a href="" class="company-list__subcat-link">
+                    Insurance
+                </a>
+            </div>
+        </div>
+        <div class="company-list__wrapper">
+            <div class="company-list__section">
+                <a href="#" class="company-list__section-link">
+                    Business & Finances
+                </a>
+            </div>
+            <div class="company-list__subcat">
+                &nbsp;&nbsp; - <a href="" class="company-list__subcat-link">
+                    Banks
+                </a>
+            </div>
+            <div class="company-list__subcat">
+                &nbsp;&nbsp; - <a href="" class="company-list__subcat-link">
+                    Loans
+                </a>
+            </div>
+            <div class="company-list__subcat">
+                &nbsp;&nbsp; - <a href="" class="company-list__subcat-link">
+                    Tax Services
+                </a>
+            </div>
+            <div class="company-list__subcat">
+                &nbsp;&nbsp; - <a href="" class="company-list__subcat-link">
+                    Insurance
+                </a>
+            </div>
+        </div>
     </div>
     <!-- Company List A -->
     <div class="company-list">
@@ -61,12 +331,127 @@
                 Lorem ipsum dolor sit.
             </a>
         </div>
+        <div class="company-list__item">
+            <a href="$" class="company-list__item-link">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, molestiae.
+            </a>
+        </div>
+        <div class="company-list__item">
+            <a href="$" class="company-list__item-link">
+                Lorem ipsum dolor sit.
+            </a>
+        </div>
+        <div class="company-list__item">
+            <a href="$" class="company-list__item-link">
+                Lorem ipsum dolor sit.
+            </a>
+        </div>
+        <div class="company-list__item">
+            <a href="$" class="company-list__item-link">
+                Lorem ipsum dolor sit.
+            </a>
+        </div>
+        <div class="company-list__item">
+            <a href="$" class="company-list__item-link">
+                Lorem ipsum dolor sit.
+            </a>
+        </div>
+        <div class="company-list__item">
+            <a href="$" class="company-list__item-link">
+                Lorem ipsum dolor sit.
+            </a>
+        </div>
+        <div class="company-list__item">
+            <a href="$" class="company-list__item-link">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime tempora ipsa repellendus amet reiciendis eligendi.
+            </a>
+        </div>
+        <div class="company-list__item">
+            <a href="$" class="company-list__item-link">
+                Lorem ipsum dolor sit.
+            </a>
+        </div>
     </div>
     <!-- lastcompanieslist -->
-    <div class="company-list">
+    <div class="company-list company-list_column">
         <div class="company-list__green">
             <a href="#" class="company-list__green-link">
                 Lorem ipsum dolor sit amet.
+            </a>
+        </div>
+        <div class="company-list__green">
+            <a href="#" class="company-list__green-link">
+                Lorem ipsum dolor sit amet.
+            </a>
+        </div>
+        <div class="company-list__green">
+            <a href="#" class="company-list__green-link">
+                Lorem ipsum dolor sit amet.
+            </a>
+        </div>
+        <div class="company-list__green">
+            <a href="#" class="company-list__green-link">
+                Lorem ipsum dolor sit amet.
+            </a>
+        </div>
+        <div class="company-list__green">
+            <a href="#" class="company-list__green-link">
+                Lorem ipsum dolor sit amet.
+            </a>
+        </div>
+        <div class="company-list__green">
+            <a href="#" class="company-list__green-link">
+                Lorem ipsum dolor sit amet.
+            </a>
+        </div>
+        <div class="company-list__green">
+            <a href="#" class="company-list__green-link">
+                Lorem ipsum dolor sit amet.
+            </a>
+        </div>
+        <div class="company-list__green">
+            <a href="#" class="company-list__green-link">
+                Lorem ipsum dolor sit amet.
+            </a>
+        </div>
+        <div class="company-list__green">
+            <a href="#" class="company-list__green-link">
+                Lorem ipsum dolor sit amet.
+            </a>
+        </div>
+        <div class="company-list__green">
+            <a href="#" class="company-list__green-link">
+                Lorem ipsum dolor sit amet.
+            </a>
+        </div>
+        <div class="company-list__green">
+            <a href="#" class="company-list__green-link">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, ad.
+            </a>
+        </div>
+        <div class="company-list__green">
+            <a href="#" class="company-list__green-link">
+                Lorem ipsum dolor sit amet.
+            </a>
+        </div>
+        <div class="company-list__green">
+            <a href="#" class="company-list__green-link">
+                Lorem ipsum dolor sit amet.
+            </a>
+        </div>
+        <div class="company-list__green">
+            <a href="#" class="company-list__green-link">
+                Lorem ipsum dolor sit amet.
+            </a>
+        </div>
+        <div class="company-list__green">
+            <a href="#" class="company-list__green-link">
+                Lorem ipsum dolor sit amet.
+            </a>
+        </div>
+        <div class="company-list__green">
+            <a href="#" class="company-list__green-link">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti explicabo animi nostrum. Magnam, incidunt laborum! Consectetur ratione soluta animi iste.
             </a>
         </div>
         <div class="company-list__green">
