--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body style="padding: 0;margin: 0;">
     <!-- categories -->
     <div class="company-list">
-        <div class="company-list__wrapper">
+        <div class="company-list__block">
             <div class="company-list__section">
                 <a href="#" class="company-list__section-link">
                     Business & Finances
@@ -38,7 +38,7 @@
                 </a>
             </div>
         </div>
-        <div class="company-list__wrapper">
+        <div class="company-list__block">
             <div class="company-list__section">
                 <a href="#" class="company-list__section-link">
                     Business & Finances
@@ -65,7 +65,7 @@
                 </a>
             </div>
         </div>
-        <div class="company-list__wrapper">
+        <div class="company-list__block">
             <div class="company-list__section">
                 <a href="#" class="company-list__section-link">
                     Business & Finances
@@ -92,7 +92,7 @@
                 </a>
             </div>
         </div>
-        <div class="company-list__wrapper">
+        <div class="company-list__block">
             <div class="company-list__section">
                 <a href="#" class="company-list__section-link">
                     Business & Finances
@@ -119,7 +119,7 @@
                 </a>
             </div>
         </div>
-        <div class="company-list__wrapper">
+        <div class="company-list__block">
             <div class="company-list__section">
                 <a href="#" class="company-list__section-link">
                     Business & Finances
@@ -146,7 +146,7 @@
                 </a>
             </div>
         </div>
-        <div class="company-list__wrapper">
+        <div class="company-list__block">
             <div class="company-list__section">
                 <a href="#" class="company-list__section-link">
                     Business & Finances
@@ -173,7 +173,7 @@
                 </a>
             </div>
         </div>
-        <div class="company-list__wrapper">
+        <div class="company-list__block">
             <div class="company-list__section">
                 <a href="#" class="company-list__section-link">
                     Business & Finances
@@ -200,7 +200,7 @@
                 </a>
             </div>
         </div>
-        <div class="company-list__wrapper">
+        <div class="company-list__block">
             <div class="company-list__section">
                 <a href="#" class="company-list__section-link">
                     Business & Finances
@@ -227,7 +227,7 @@
                 </a>
             </div>
         </div>
-        <div class="company-list__wrapper">
+        <div class="company-list__block">
             <div class="company-list__section">
                 <a href="#" class="company-list__section-link">
                     Business & Finances
@@ -254,7 +254,7 @@
                 </a>
             </div>
         </div>
-        <div class="company-list__wrapper">
+        <div class="company-list__block">
             <div class="company-list__section">
                 <a href="#" class="company-list__section-link">
                     Business & Finances
@@ -281,7 +281,7 @@
                 </a>
             </div>
         </div>
-        <div class="company-list__wrapper">
+        <div class="company-list__block">
             <div class="company-list__section">
                 <a href="#" class="company-list__section-link">
                     Business & Finances
